WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160649
Node.baseURI should not be nullable
https://bugs.webkit.org/show_bug.cgi?id=160649
Summary
Node.baseURI should not be nullable
Chris Dumez
Reported
2016-08-07 15:39:54 PDT
Node.baseURI should not be nullable as per the latest DOM specification: -
https://dom.spec.whatwg.org/#dom-node-baseuri
It is not nullable in Firefox. It is supposed to fallback to using the document's URL.
Attachments
Patch
(15.56 KB, patch)
2016-08-07 15:44 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(15.37 KB, patch)
2016-08-07 17:29 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-yosemite
(831.71 KB, application/zip)
2016-08-07 18:24 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews107 for mac-yosemite-wk2
(915.77 KB, application/zip)
2016-08-07 18:28 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews125 for ios-simulator-wk2
(680.37 KB, application/zip)
2016-08-07 18:34 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews117 for mac-yosemite
(1.45 MB, application/zip)
2016-08-07 18:36 PDT
,
Build Bot
no flags
Details
Patch
(17.63 KB, patch)
2016-08-07 19:16 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-08-07 15:44:56 PDT
Created
attachment 285538
[details]
Patch
Darin Adler
Comment 2
2016-08-07 16:19:15 PDT
Comment on
attachment 285538
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=285538&action=review
OK, but seems a little messy.
> Source/WebCore/dom/Node.h:165 > + const URL& baseURI() const; > + const URL& baseURIForBindings() const;
What is the code that still needs to use the old Node::baseURI function? I don’t think we should be keeping it around.
> LayoutTests/imported/w3c/ChangeLog:13 > + is still failing. We are failling back to using the document's URL, as expected.
typo: "failling"
Chris Dumez
Comment 3
2016-08-07 16:37:46 PDT
(In reply to
comment #2
)
> Comment on
attachment 285538
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=285538&action=review
> > OK, but seems a little messy. > > > Source/WebCore/dom/Node.h:165 > > + const URL& baseURI() const; > > + const URL& baseURIForBindings() const; > > What is the code that still needs to use the old Node::baseURI function? I > don’t think we should be keeping it around. > > > LayoutTests/imported/w3c/ChangeLog:13 > > + is still failing. We are failling back to using the document's URL, as expected. > > typo: "failling"
Ok, I see if I can make this a bit cleaner.
Chris Dumez
Comment 4
2016-08-07 17:29:24 PDT
Created
attachment 285544
[details]
Patch
Build Bot
Comment 5
2016-08-07 18:24:38 PDT
Comment on
attachment 285544
[details]
Patch
Attachment 285544
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1831699
New failing tests: fast/filter-image/filter-image-blur.html
Build Bot
Comment 6
2016-08-07 18:24:42 PDT
Created
attachment 285549
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-08-07 18:28:41 PDT
Comment on
attachment 285544
[details]
Patch
Attachment 285544
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1831703
New failing tests: fast/filter-image/filter-image-blur.html
Build Bot
Comment 8
2016-08-07 18:28:45 PDT
Created
attachment 285550
[details]
Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 9
2016-08-07 18:34:17 PDT
Comment on
attachment 285544
[details]
Patch
Attachment 285544
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1831702
New failing tests: fast/filter-image/filter-image-blur.html
Build Bot
Comment 10
2016-08-07 18:34:21 PDT
Created
attachment 285551
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.5
Build Bot
Comment 11
2016-08-07 18:36:47 PDT
Comment on
attachment 285544
[details]
Patch
Attachment 285544
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1831704
New failing tests: fast/filter-image/filter-image-blur.html
Build Bot
Comment 12
2016-08-07 18:36:51 PDT
Created
attachment 285552
[details]
Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Chris Dumez
Comment 13
2016-08-07 19:16:54 PDT
Created
attachment 285554
[details]
Patch
WebKit Commit Bot
Comment 14
2016-08-07 19:49:25 PDT
Comment on
attachment 285554
[details]
Patch Clearing flags on attachment: 285554 Committed
r204247
: <
http://trac.webkit.org/changeset/204247
>
WebKit Commit Bot
Comment 15
2016-08-07 19:49:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug